Add some changes to my project

--- a/country.html
+++ b/country.html
@@ -8,7 +8,7 @@
 </head>
 <body>
      <!--Link powrotu do main.html -->
-    <a href="main.html" target="_blank" class="home-link">Go Home</a>
+    <a href="main.html" target="_blank" class="home-link">🏠Go Home🏠</a>
     <!-- Ikona w prawym górnym rogu-->
      <img src="img/compass.png" alt="Compass" class="compass">
      <!-- Wyświetlane dane -->
